syntax = "proto3";

package pb;

option go_package = "gitee.com/healthy/healthy/manager/pb;pb";

message CaseData {
    string id = 1;
    string userid = 2;
}

service CaseDataManager {
    rpc CreateCaseData(CreateCaseDataRequest) returns (CaseData) {}
    rpc GetCaseData(GetCaseDataRequest) returns (CaseData) {}
    rpc UpdateCaseData(UpdateCaseDataRequest) returns (CaseData) {}
    rpc DeleteCaseData(DeleteCaseDataRequest) returns (CaseData) {}
    rpc GetCaseDatas(GetCaseDatasRequest) returns (GetCaseDatasReply) {}
}

message CreateCaseDataRequest {
    CaseData data = 1;
}

message GetCaseDataRequest {
    string id = 1;
}

message UpdateCaseDataRequest {
    string id = 1;
    CaseData data = 2;
}

message DeleteCaseDataRequest {
    string id = 1;
}

message GetCaseDatasRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetCaseDatasReply {
    int64 total_count = 1;
    repeated CaseData items = 2;
}