syntax = "proto3";

package pb;

option go_package = "gitee.com/healthy/healthy/manager/pb;pb";

message MeasureDetail {
    string id = 1;
    string userid = 2;
}

service MeasureDetailManager {
    rpc CreateMeasureDetail(CreateMeasureDetailRequest) returns (MeasureDetail) {}
    rpc GetMeasureDetail(GetMeasureDetailRequest) returns (MeasureDetail) {}
    rpc UpdateMeasureDetail(UpdateMeasureDetailRequest) returns (MeasureDetail) {}
    rpc DeleteMeasureDetail(DeleteMeasureDetailRequest) returns (MeasureDetail) {}
    rpc GetMeasureDetails(GetMeasureDetailsRequest) returns (GetMeasureDetailsReply) {}
}

message CreateMeasureDetailRequest {
    MeasureDetail data = 1;
}

message GetMeasureDetailRequest {
    string id = 1;
}

message UpdateMeasureDetailRequest {
    string id = 1;
    MeasureDetail data = 2;
}

message DeleteMeasureDetailRequest {
    string id = 1;
}

message GetMeasureDetailsRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetMeasureDetailsReply {
    int64 total_count = 1;
    repeated MeasureDetail items = 2;
}