syntax = "proto3";

package pb;

option go_package = "gitee.com/healthy/healthy/manager/pb;pb";

message Personal {
    string id = 1;
    string userid = 2;
    string gender = 3;
    string birth = 4;
    string name = 5;
}

service PersonalManager {
    rpc CreatePersonal(CreatePersonalRequest) returns (Personal) {}
    rpc GetPersonal(GetPersonalRequest) returns (Personal) {}
    rpc UpdatePersonal(UpdatePersonalRequest) returns (Personal) {}
    rpc DeletePersonal(DeletePersonalRequest) returns (Personal) {}
    rpc GetPersonals(GetPersonalsRequest) returns (GetPersonalsReply) {}
}

message CreatePersonalRequest {
    Personal data = 1;
}

message GetPersonalRequest {
    string id = 1;
}

message UpdatePersonalRequest {
    string id = 1;
    Personal data = 2;
}

message DeletePersonalRequest {
    string id = 1;
}

message GetPersonalsRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetPersonalsReply {
    int64 total_count = 1;
    repeated Personal items = 2;
}